12/10/07 - metabase now deals with indexes. Metabase is now also able to create
(honzam)   right SQL for creating whole AA database, so sql_update.php3 script
           will use it instead of SQLs placed directly into sql_update.php3
         - added new Add Polls action in AA -> Optimize which creates Polls
           tables and first Polls template for you
         - cleanup in polls
         - parameters described in modules/polls/poll.php3
         - fixed syntax errors in aa_optimize.php3
12/06/07 - fixed sql_update.php3 script for polls module - you can use
(honzam)   AA -> Optimize "Add Polls" action for initial table creation
!SQL!
12/05/07 - polls module finalized and working - last bugs fixed, database
(honzam)   structure of polls* tables is different. Thanks should go to Econnect
           who sponsored the initial polls implementation and to Colnodo, who
           sponsored this finalization.
         - Error page could be defined for database errors - use
           define("DB_ERROR_PAGE", "http://some.url.cz/page.html"); in your
           config.php3 file.
         - new possibility to set the the URL for uploaded files. The place,
           where the data are stored is not changed, but you are able to change
           the url which is stored into database. So, if you make symbolic link
           from say /var/www/some.domain.cz/documents to
           /var/www/aa.domain.cz/img_upload/56345363737337373763, then you can
           set that the uploaded url to some.domain.cz, so the files will look
           like from your domain.
           See "Slice Admin" -> "Slice Fields" -> "Upload URL" field
         - new support for compound widgets (like date, file upload) in
           AA_Widget_* class and its support in AA_Form_Grabber API.
           Compound widgets, which consists from more than one input. In such
           case we use following syntax:
             aa[n1_54343ea876898b6754e3578a8cc544e6][publish_date____][dte][d][]